fixed api bugs and errors
Co-authored-by: Fares Karim <HunterElite0@users.noreply.github.com>

--- a/ClientApp/clinic-reservation/src/app/signup/page.module.css
+++ b/ClientApp/clinic-reservation/src/app/signup/page.module.css
@@ -94,4 +94,11 @@
   .a{
     text-decoration: underline;
   }
+
+  .radio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+  }
   
