--- a/ClientApp/clinic-reservation/src/app/signup/page.module.css
+++ b/ClientApp/clinic-reservation/src/app/signup/page.module.css
@@ -1,108 +1,112 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 6rem;
-    min-height: 100vh;
-  }
-  
-  .description {
-    display: inherit;
-    justify-content: inherit;
-    align-items: inherit;
-    font-size: 0.85rem;
-    max-width: var(--max-width);
-    width: 100%;
-    z-index: 2;
-    font-family: var(--font-mono);
-  }
-  
-  .description a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-  }
-  
-  .description p {
-    position: relative;
-    margin: 0;
-    padding: 1rem;
-    background-color: rgba(var(--callout-rgb), 0.5);
-    border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-    border-radius: var(--border-radius);
-  }
-  
-  .code {
-    font-weight: 700;
-    font-family: var(--font-mono);
-  }
-  
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(4, minmax(25%, auto));
-    max-width: 100%;
-    width: var(--max-width);
-  }
-  
-  .card {
-    padding: 1rem 1.2rem;
-    border-radius: var(--border-radius);
-    background: rgba(var(--card-rgb), 0);
-    border: 1px solid rgba(var(--card-border-rgb), 0);
-    transition: background 200ms, border 200ms;
-  }
-  
-  .card span {
-    display: inline-block;
-    transition: transform 200ms;
-  }
-  
-  .card h2 {
-    font-weight: 600;
-    margin-bottom: 0.7rem;
-  }
-  
-  .card p {
-    margin: 0;
-    opacity: 0.6;
-    font-size: 0.9rem;
-    line-height: 1.5;
-    max-width: 30ch;
-  }
-  
-  .logo {
-    position: relative;
-  }
-  
-  .formdiv{
-    display: grid;
-    grid-template-columns: repeat(1, minmax(25%, auto));
-    max-width: 100%;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-  }
-  
-  .form{
-    display: grid;
-    grid-template-columns: repeat(1, minmax(25%, auto));
-  
-  }
-  
-  .a{
-    text-decoration: underline;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6rem;
+  min-height: 100vh;
+}
 
-  .radio{
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
+.description {
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  font-size: 0.85rem;
+  max-width: var(--max-width);
+  width: 100%;
+  z-index: 2;
+  font-family: var(--font-mono);
+}
 
-  .radioItem{
-    margin-left: 1rem;
-  }
-  
+.description a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.description p {
+  position: relative;
+  margin: 0;
+  padding: 1rem;
+  background-color: rgba(var(--callout-rgb), 0.5);
+  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
+  border-radius: var(--border-radius);
+}
+
+.code {
+  font-weight: 700;
+  font-family: var(--font-mono);
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(25%, auto));
+  max-width: 100%;
+  width: var(--max-width);
+}
+
+.card {
+  padding: 1rem 1.2rem;
+  border-radius: var(--border-radius);
+  background: rgba(var(--card-rgb), 0);
+  border: 1px solid rgba(var(--card-border-rgb), 0);
+  transition: background 200ms, border 200ms;
+}
+
+.card span {
+  display: inline-block;
+  transition: transform 200ms;
+}
+
+.card h2 {
+  font-weight: 600;
+  margin-bottom: 0.7rem;
+}
+
+.card p {
+  margin: 0;
+  opacity: 0.6;
+  font-size: 0.9rem;
+  line-height: 1.5;
+  max-width: 30ch;
+}
+
+.logo {
+  position: relative;
+}
+
+.formdiv {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(25%, auto));
+  max-width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(25%, auto));
+
+}
+
+.a {
+  text-decoration: underline;
+}
+
+.radio {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.radioItem {
+  margin-left: 1rem;
+}
+
+.specialityDiv{
+  display: none;
+  grid-template-columns: repeat(1, minmax(25%, auto));
+}
